<resources>
    <string name="app_name">SockSensei</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mind_prompt">What Has Been On Your Mind Recently?</string>
    <string name="text_Hint">Vent Your Thoughts Here....</string>
    <string name="Sock_Name">Sleepy Joe</string>
    <string name="Achievement">The sock that perfectly matches your mood right now is...</string>
    <string name="Retry">Feeling a different mood?</string>
    <string name="Happy_Hailey">Happy Hailey</string>
    <string name="Happy_Hailey_Description">Meet Happy Hailey—a human ray of sunshine with a permanent grin and a laugh that’s basically a serotonin boost. She’s the type to skip through life like it’s a field of daisies, spreading joy like confetti and turning every “meh” into a “YAY!” Her vibe? Pure, unfiltered happiness—like a puppy chasing bubbles on a summer day. 🌞✨</string>
    <string name="Sad_sam">Sad Sam</string>
    <string name="chill_guy">Chill Guy Chad</string>
    <string name="warp">Wicked Warp</string>
    <string name="orkes">Open Minded Orkes</string>
    <string name="orkes_des">Feeling chaotic? Let these socks streamline your emotional workflow. Whether you are deploying confidence for a big meeting, connecting with your inner zen, or debugging a bad day, these socks are the microservices your feet</string>    <string name="Sad_sam_description">Meet Maple Mope, the human embodiment of a soggy, slightly sarcastic Sad Sam sock! This person’s mood is like a Canadian winter—long, a little dramatic, but oddly endearing.</string>

    <string name="Sock_description">Sleepy Joe the type of non chalant pair of sock that goes with your mood, </string>
</resources>