<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Gradient Background -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/lightblueg"
        android:backgroundTint="@color/Sad_simon" />

    <!-- Your Main Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Congrats Announcement -->
        <TextView
            android:id="@+id/achievementTextView"
            android:layout_width="400sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/Achievement"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />

        <!-- Sock Name -->
        <TextView
            android:id="@+id/sockNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Sad_sam"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />

        <!-- Sock Image -->

        <!-- Sock Description -->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="314dp"
            android:layout_height="290dp"
            android:gravity="center"
            app:srcCompat="@drawable/ss" />

        <TextView
            android:id="@+id/sockDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/Sock_description"
            android:textColor="#808080"
            android:textSize="16sp" />

        <!-- Reset Everything Button -->
        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#616AD8"
            android:text="@string/Retry" />

    </LinearLayout>
</FrameLayout>