<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Congrats Announcement -->
    <TextView
        android:id="@+id/achievementTextView"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/Achievement"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Sock Name -->
    <TextView
        android:id="@+id/sockNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/Sock_Name"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <!-- Image updater -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:srcCompat="@drawable/img"

        />
    <!-- Sock Description -->
    <TextView
        android:id="@+id/sockDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/Sock_description"
        android:textColor="#808080"
        android:textSize="16sp" />




</LinearLayout>